--- a/Lead_Scoring_Assignment.ipynb
+++ b/Lead_Scoring_Assignment.ipynb
@@ -7932,7 +7932,7 @@
    "id": "5a210ea4-6663-499b-ab8b-b3dc36d43f25",
    "metadata": {},
    "source": [
-    "### Precision and recall tradeoff"
+    "### Step 11: Precision and recall tradeoff"
    ]
   },
   {
@@ -8027,7 +8027,7 @@
    "id": "d44c3882-6059-442e-8d6d-14192ff6b29b",
    "metadata": {},
    "source": [
-    "### Step 11: Making predictions on the test set"
+    "### Step 12: Making predictions on the test set"
    ]
   },
   {
